0.5.6a Changelog: - Fix user info not aligning to the top right in some zoom levels.

--- a/src/UI/index.css
+++ b/src/UI/index.css
@@ -28,8 +28,8 @@
 
 .panels-3wFtMD > .container-YkUktl {
     z-index: 99;
-    position: fixed;
-    top: 3%;
+    position: absolute;
+    top: 0.5%;
     height: 35px;
     width: 225px;
     right: 1%;
